# code-graph-mcp

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
benches/: indexing.rs
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: code-explorer.md
claude-plugin/commands/: impact.md  rebuild.md  status.md  trace.md  understand.md
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: adopt.js  adopt.test.js  auto-update.js  auto-update.test.js  doctor.js  doctor.test.js  find-binary.js  find-binary.test.js  incremental-index.js  incremental-index.test.js  lifecycle.e2e.test.js  lifecycle.js  lifecycle.test.js  mcp-launcher.js  pre-edit-guide.js  pre-edit-guide.test.js  pre-explore-guide.js  pre-glob-guide.js  pre-read-guide.js  pre-search-guide.js  session-init.js  session-init.test.js  statusline-chain.js  statusline-composite.js  statusline.js  user-prompt-context.js  user-prompt-context.test.js  version-utils.js  version-utils.test.js
claude-plugin/skills/: code-navigation.md  explore.md  index.md
claude-plugin/templates/: plugin_code_graph_mcp.md
docs/: api设计.txt  augment功能.md  功能架构.txt  开发技术栈.md  数据库设计.txt  整合开源项目功能.md  方案初步.md  索引管线.txt  错误处理.txt
docs/superpowers/plans/: 2026-03-11-code-graph-mcp.md  2026-03-13-integration-completion.md  2026-03-13-phase1-stabilization.md  2026-03-14-embedding-enablement.md  2026-03-21-phase1-optimization.md  2026-03-31-consistency-check.md
docs/superpowers/specs/: 2026-03-11-code-graph-mcp-design.md  2026-03-13-integration-completion-design.md  2026-03-13-maturity-improvement-design.md  2026-03-14-embedding-enablement-design.md  2026-03-21-phase1-optimization-design.md  2026-03-31-consistency-check-design.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: analyze-search-queries.py  bump-version.sh  copy-binary.js  e2e-validate.js  install-e2e.test.js  pre-commit.sh  release-smoke.test.js  sync-versions.js
src/: cli.rs  domain.rs  lib.rs  main.rs
src/embedding/: context.rs  model.rs
src/graph/: query.rs
src/indexer/: merkle.rs  mod.rs  pipeline.rs  watcher.rs
src/mcp/: metrics.rs  mod.rs  protocol.rs  server.rs  tools.rs  types.rs
src/mcp/server/: helpers.rs  mod.rs  tools.rs
src/parser/: lang_config.rs  languages.rs  mod.rs  relations.rs  treesitter.rs
src/sandbox/: compressor.rs
src/search/: acronyms.rs  fusion.rs  mod.rs  tokenizer.rs
src/storage/: db.rs  mod.rs  queries.rs  schema.rs
src/utils/: config.rs  mod.rs
tests/: cli_e2e.rs  hardening.rs  integration.rs  parser_deep_test.rs  plugin_e2e.rs  routing_bench.rs
tests/common/: mod.rs
