[package]
name = "code-graph-mcp"
version = "0.1.0"
edition = "2021"

[features]
default = []
embed-model = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled-full"] }
blake3 = "1"
ignore = "0.4"
notify = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bytemuck = "1"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
