[package]
name = "code-graph-mcp"
version = "0.7.2"
edition = "2021"

[features]
default = ["embed-model"]
embed-model = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers",
               "dep:tokenizers", "dep:ureq", "dep:flate2", "dep:tar", "dep:dirs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled-full"] }
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
blake3 = "1"
ignore = "0.4"
rayon = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libc = "0.2"
bytemuck = "1"
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"], optional = true }
ureq = { version = "3", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
dirs = { version = "6", optional = true }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-swift = "0.6.0"
tree-sitter-dart-orchard = "0.3.2"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false
